syntax = "proto3";

option go_package = "./pb";

package gserver;

// 完成任务
message FinishQuestReq {
  int32 questCfgId = 1; // 任务id
}

// 完成任务的返回结果
message FinishQuestRes {
  int32 questCfgId = 1; // 任务id
}
